Fix warning notice contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -375,6 +375,7 @@ html.theme-light .text-orange-100,
 html.theme-light .text-orange-100\/60,
 html.theme-light .text-orange-100\/70,
 html.theme-light .text-orange-100\/80,
+html.theme-light .text-orange-100\/90,
 html.theme-light .text-orange-200,
 html.theme-light .text-orange-200\/70,
 html.theme-light .text-orange-200\/80,
@@ -384,6 +385,7 @@ html.theme-light .text-amber-100,
 html.theme-light .text-amber-100\/60,
 html.theme-light .text-amber-100\/70,
 html.theme-light .text-amber-100\/80,
+html.theme-light .text-amber-100\/90,
 html.theme-light .text-amber-200,
 html.theme-light .text-amber-200\/70,
 html.theme-light .text-amber-200\/80,
@@ -396,6 +398,7 @@ html.theme-light .text-yellow-100,
 html.theme-light .text-yellow-100\/60,
 html.theme-light .text-yellow-100\/70,
 html.theme-light .text-yellow-100\/80,
+html.theme-light .text-yellow-100\/90,
 html.theme-light .text-yellow-50\/90,
 html.theme-light .text-yellow-200,
 html.theme-light .text-yellow-200\/70,
